# stac-validator

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile-tox  LICENSE  Makefile  README.md  __init__.py  cli.html  docker-compose.yml  genindex.html  index.html  objects.inv  pass_dict.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema_config.yaml  search.html  searchindex.js  setup.py  stac_exceptions.py  stac_utilities.py  stac_validator.py  stac_version.py  test_in_container.sh  tox.ini  utilities.html  validator.html
.circleci/: config.yml
.github/workflows/: docs.yml  publish-to-pypi.yml  publish.yml  (+2 more)
_sources/: cli.rst.txt  index.rst.txt  validator.rst.txt
cdk-deployment/: .gitignore  README.md  app.py  requirements.txt
docs/: conf.py  index.rst  requirements.txt  utilities.rst
flask_app/: stac_flask.py
stac_validator/: __init__.py  lint.py  schema_config.yaml  sentinel2.json  stac_handler.py  stac_utilities.py  stac_validator.py  stac_validator_click.py  utilities.py  validate.py  validator.py
stac_validator_lambda/: lambda_requirements.txt  stac_handler.py  stac_validator.py
templates/: main.html  result.html
tests/: __init__.py  pass_dict.py  test_assets.py  test_config.py  test_core.py  test_custom.py  test_default.py  test_extensions.py  test_header.py  test_links.py  test_pydantic.py  test_recursion.py  test_stac_validator.py  test_sys_exit.py  test_validate_collections.py  test_validate_dict.py  test_validate_item_collection.py
tox/: Dockerfile-tox
validator-cdk/: README.md  requirements.txt  setup.py
(+1505 files in other folders)
